Agregado Dijkstra para calcular el camino mas corto.